idocs-share/source/web/themes/citeckTheme/presentation.css
/* ... */
#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field {
   border: none;
  padding: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field:last-child,
#bd #yui-main .search .forms-container .share-form .form-container .form-fields form {
   margin: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field > div,
#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u .format-info {
   clear: both;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u input.date-entry {
  float: left;
  width: 70%;
  right: 0;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g .yui-u a > img.datepicker-icon {
   vertical-align: -10px;
}

#bd #yui-main .search .forms-container .share-form .form-container .form-fields .form-field .yui-g {
   padding-top: 5px;
}

#bd #yui-main .search .yui-gc {
   margin: 15px 15px 15px 25px !important;
}


#bd #yui-main .search .yui-gc,
#bd #yui-main .search .yui-gc .yui-u {
   background-color: transparent;
   border: none;
}

#bd #yui-main .search .yui-gc .yui-u span.lookfor {
   float: left;
  padding-top: 3px;
  font-weight: 900;
}

#bd #yui-main .search .yui-gc .yui-u .yui-button.search-icon > .first-child {
   padding: 0;
   background: none; 
}


/* end advanced search*/

/* FOOTER */

.sticky-footer .footer {
   padding: 15px 0;
   box-shadow: 0px 10px 15px -10px gray inset;
   border-bottom: none;
   background-color: #e0e6ec;
}

.sticky-footer .footer-content {
  overflow: hidden;
  padding: 0 40px;
  font-size: 10px;
}

.sticky-footer .footer a.contact-us-link {
   float: right;
}

.sticky-footer .footer .description {
  float: left;
}

.sticky-footer .footer.modules-info-footer {
  box-shadow: none;
}

/* END FOOTER */


/* alfresco twister actions */

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions {
   position: relative;
   float: right;
   right: 15px;
   display: block;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions > a {
  padding: 0;
  background-position: right center;
  display: block;
  width: 17px;
  height: 17px;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonCreate"] {
   background-image: url(images/create.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonCreate"]:hover {
   background-image: url(images/create-active.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonEdit"] {
   background-image: url(images/edit-properties.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonEdit"]:hover {
   background-image: url(images/edit-properties-active.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonUpload"],
.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[name$="onUploadNewVersionClick"] {
   background-image: url(images/upload.png) !important;
}

.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[id$="onPanelButtonUpload"]:hover,
.alfresco-twister.alfresco-twister-open .alfresco-twister-actions a[name$="onUploadNewVersionClick"]:hover {
   background-image: url(images/upload-active.png) !important;
}



.alfresco-header-CurrentUserStatus .status {
   padding: 5px;
  border-radius: 10px;
  border: 1px solid;
  max-width: 100% !important;
  margin-bottom: 5px;
}

div#HEADER_USER_STATUS {
  margin-top: 7px;
}

#bd .yui-gc > .yui-u .document-details-panel .panel-body h3:not(:first-child) {
  margin-top: 10px;
}

/* comment-list */

.comments-list {
  padding: 0 15px 0 40px;
  box-sizing: border-box;
}

.comments-list .comment-details {
  width: 100% !important;
  box-sizing: border-box;
}

/* ALF-FILTERS */

#alf-filters {
  background-color: #fdfaf3;
  min-height: 83vh;
  box-sizing: border-box;
}

#alf-filters .filter,
#alf-filters .filter  li {
   padding-left: 25px;
}

#alf-filters .filter .tree,
#alf-filters .filter .category {
   padding-left: 23px;
}

#alf-filters .filter .category .ygtvitem {
  background-color: transparent;
}

#alf-filters .filter > h2 {
   font-weight: 900;
   text-transform: uppercase;
   overflow: hidden;
}

#alf-filters .filter .tree .ygtvitem {
   background-color: transparent;
}

#alf-filters .filter .filter-link {
  white-space: nowrap;
}



/* ALFRESCO-REPOSITORY */

#alfresco-repository #alf-filters {
  padding-left: 15px;
}

#alfresco-repository .toolbar,
#alfresco-repository .doclist .doclist-bar,
#alfresco-repository .doclist .documents {
   margin: 0;
}

#alfresco-repository .toolbar .header-bar {
   padding: 5px 15px 5px 0;
}


#alfresco-repository .toolbar .nav-bar {
   padding: 5px 0 10px 0   ;
   border: none; 
}

/* breadcrumbs */

#alfresco-repository .toolbar .nav-bar .breadcrumb {
  overflow: hidden;
  padding: 0;
  margin-top: 5px;
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .crumb,
#alfresco-repository .toolbar .nav-bar .breadcrumb .separator {
   line-height: 100%;
   margin: 0 15px 0 0;
   display: inline-block;
   padding: 0;
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .separator {
   margin-top: 2px;
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .crumb a.icon {
   border: none;
   background-image: url(images/small-repo-folder.png);
   display: inline-block;
   margin: 0;
   padding: 0 0 0 12px;
   background-position: left 2px;
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .crumb:hover a.icon {
   background-image: url(images/small-repo-folder-active.png);
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .crumb a.folder {
   margin: 0;
}

#alfresco-repository .toolbar .nav-bar .breadcrumb .crumb:hover a.folder {
   color: red;
}
/* ... */

